--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <a href="#" class="project-card">
 
               <figure class="card-banner">
-                <img src="./assets/galeri/22.JPG" class="w-100" alt="On a Blue background, a Wacom and a mouse.">
+                <img src="./assets/galeri/22.jpg" class="w-100" alt="On a Blue background, a Wacom and a mouse.">
               </figure>
 
               <div class="card-content">
